[gd_scene load_steps=17 format=3 uid="uid://c1dr8fotsw8qc"]

[ext_resource type="Script" path="res://scenes/ui/levelSelect/level_select.gd" id="1_7l88j"]
[ext_resource type="Texture2D" uid="uid://c05w8sfi826hy" path="res://textures/ui/To Do/ToDo_Window_Bar.png" id="2_ur3ki"]
[ext_resource type="FontFile" uid="uid://dkn1tuxa3ybyj" path="res://textures/ui/Font/OpenSans-Semibold.ttf" id="3_3ruvt"]
[ext_resource type="Texture2D" uid="uid://mcrxdaxkay6h" path="res://textures/ui/To Do/ToDo_DaySelect_CheckedDay.png" id="3_xm02n"]
[ext_resource type="Texture2D" uid="uid://ca8uqoonlrcyi" path="res://textures/ui/To Do/ToDo_Window_Exit.png" id="4_domvs"]
[ext_resource type="Texture2D" uid="uid://4gmlh3sxgio5" path="res://textures/ui/To Do/ToDo_DateSelect_InactiveDay.png" id="5_8o8gf"]
[ext_resource type="Texture2D" uid="uid://dnuw5wswl5eq" path="res://textures/ui/To Do/ToDo_DateSelect_ActiveDay.png" id="5_bxhck"]
[ext_resource type="FontFile" uid="uid://cuidb51mn7j7j" path="res://textures/ui/Font/OpenSans-Regular.ttf" id="5_o14tm"]
[ext_resource type="Texture2D" uid="uid://kly5mnfri7xi" path="res://textures/ui/To Do/ToDo_Checkbox_Checked.png" id="6_iatqu"]
[ext_resource type="Texture2D" uid="uid://bwjw31yosvgt4" path="res://textures/ui/To Do/ToDo_Checkbox_Unchecked.png" id="7_58dtw"]
[ext_resource type="Texture2D" uid="uid://ce2nl6ifrp0x6" path="res://textures/ui/To Do/ToDo_Window_Exit_pressed.png" id="9_rykan"]
[ext_resource type="Texture2D" uid="uid://b60j1lnk13mi0" path="res://textures/ui/To Do/ToDo_Window_Exit_hovered.png" id="10_kx7y2"]
[ext_resource type="FontFile" uid="uid://ck6aeikl4kkwa" path="res://textures/ui/Font/OpenSans-ExtraBold.ttf" id="10_ywh2y"]
[ext_resource type="Texture2D" uid="uid://c6tboe56rqmvn" path="res://textures/ui/To Do/ToDo_StartTaskButton.png" id="11_ao3mt"]
[ext_resource type="Texture2D" uid="uid://dfv7c6n46hm3i" path="res://textures/ui/To Do/ToDo_StartTaskButton_Pressed.png" id="12_1h5n3"]
[ext_resource type="Texture2D" uid="uid://bduope1daj6uo" path="res://textures/ui/To Do/ToDo_StartTaskButton_Hover.png" id="13_7uosg"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_7l88j")

[node name="BackGround" type="ColorRect" parent="."]
offset_left = 76.0
offset_top = 94.0
offset_right = 1156.0
offset_bottom = 1174.0
scale = Vector2(0.85, 0.85)
color = Color(0.92549, 0.92549, 0.87451, 1)

[node name="LevelTitles" type="HBoxContainer" parent="BackGround"]
offset_left = 64.0
offset_top = 128.0
offset_right = 1016.0
offset_bottom = 192.0
theme_override_constants/separation = 18

[node name="Level1" type="TextureRect" parent="BackGround/LevelTitles"]
texture_filter = 1
offset_right = 176.0
offset_bottom = 64.0
texture = ExtResource("5_8o8gf")

[node name="Label" type="Label" parent="BackGround/LevelTitles/Level1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level2" type="TextureRect" parent="BackGround/LevelTitles"]
texture_filter = 1
offset_left = 194.0
offset_right = 370.0
offset_bottom = 64.0
texture = ExtResource("5_8o8gf")

[node name="Label" type="Label" parent="BackGround/LevelTitles/Level2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level3" type="TextureRect" parent="BackGround/LevelTitles"]
texture_filter = 1
offset_left = 388.0
offset_right = 564.0
offset_bottom = 64.0
texture = ExtResource("5_8o8gf")

[node name="Label" type="Label" parent="BackGround/LevelTitles/Level3"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level4" type="TextureRect" parent="BackGround/LevelTitles"]
texture_filter = 1
offset_left = 582.0
offset_right = 758.0
offset_bottom = 64.0
texture = ExtResource("5_8o8gf")

[node name="Label" type="Label" parent="BackGround/LevelTitles/Level4"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level5" type="TextureRect" parent="BackGround/LevelTitles"]
texture_filter = 1
offset_left = 776.0
offset_right = 952.0
offset_bottom = 64.0
texture = ExtResource("5_8o8gf")

[node name="Label" type="Label" parent="BackGround/LevelTitles/Level5"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Complete" type="Control" parent="BackGround"]
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 128.0
offset_right = 1016.0
offset_bottom = 192.0

[node name="Level1" type="TextureRect" parent="BackGround/Complete"]
visible = false
texture_filter = 1
offset_right = 176.0
offset_bottom = 64.0
texture = ExtResource("5_8o8gf")

[node name="CheckedDay" type="TextureRect" parent="BackGround/Complete/Level1"]
offset_left = 20.0
offset_top = 16.0
offset_right = 52.0
offset_bottom = 48.0
texture = ExtResource("3_xm02n")

[node name="Label" type="Label" parent="BackGround/Complete/Level1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level2" type="TextureRect" parent="BackGround/Complete"]
visible = false
texture_filter = 1
offset_left = 194.0
offset_right = 370.0
offset_bottom = 64.0
texture = ExtResource("5_8o8gf")

[node name="CheckedDay" type="TextureRect" parent="BackGround/Complete/Level2"]
offset_left = 20.0
offset_top = 16.0
offset_right = 52.0
offset_bottom = 48.0
texture = ExtResource("3_xm02n")

[node name="Label" type="Label" parent="BackGround/Complete/Level2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level3" type="TextureRect" parent="BackGround/Complete"]
visible = false
texture_filter = 1
offset_left = 388.0
offset_right = 564.0
offset_bottom = 64.0
texture = ExtResource("5_8o8gf")

[node name="CheckedDay" type="TextureRect" parent="BackGround/Complete/Level3"]
offset_left = 20.0
offset_top = 16.0
offset_right = 52.0
offset_bottom = 48.0
texture = ExtResource("3_xm02n")

[node name="Label" type="Label" parent="BackGround/Complete/Level3"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level4" type="TextureRect" parent="BackGround/Complete"]
visible = false
texture_filter = 1
offset_left = 582.0
offset_right = 758.0
offset_bottom = 64.0
texture = ExtResource("5_8o8gf")

[node name="CheckedDay" type="TextureRect" parent="BackGround/Complete/Level4"]
offset_left = 20.0
offset_top = 16.0
offset_right = 52.0
offset_bottom = 48.0
texture = ExtResource("3_xm02n")

[node name="Label" type="Label" parent="BackGround/Complete/Level4"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level5" type="TextureRect" parent="BackGround/Complete"]
visible = false
texture_filter = 1
offset_left = 776.0
offset_right = 952.0
offset_bottom = 64.0
texture = ExtResource("5_8o8gf")

[node name="CheckedDay" type="TextureRect" parent="BackGround/Complete/Level5"]
offset_left = 20.0
offset_top = 16.0
offset_right = 52.0
offset_bottom = 48.0
texture = ExtResource("3_xm02n")

[node name="Label" type="Label" parent="BackGround/Complete/Level5"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 5
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WindowBar" type="TextureRect" parent="BackGround"]
offset_right = 1080.0
offset_bottom = 84.0
texture = ExtResource("2_ur3ki")

[node name="Title" type="Label" parent="BackGround/WindowBar"]
offset_left = 67.0588
offset_top = 23.5294
offset_right = 352.059
offset_bottom = 73.5294
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 34
text = "QA Task Manager"

[node name="ActiveLevels" type="Control" parent="BackGround"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Level1" type="Control" parent="BackGround/ActiveLevels"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelTag" type="TextureRect" parent="BackGround/ActiveLevels/Level1"]
texture_filter = 1
offset_left = 64.0
offset_top = 128.0
offset_right = 240.0
offset_bottom = 192.0
texture = ExtResource("5_bxhck")

[node name="Label" type="Label" parent="BackGround/ActiveLevels/Level1/LevelTag"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="BackGround/ActiveLevels/Level1"]
offset_left = 64.0
offset_top = 234.0
offset_right = 285.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 28
text = "Level 1 QA Tasks"

[node name="Label2" type="Label" parent="BackGround/ActiveLevels/Level1"]
offset_left = 66.0
offset_top = 293.0
offset_right = 155.0
offset_bottom = 335.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_o14tm")
theme_override_font_sizes/font_size = 28
text = "TODO:"

[node name="Task" type="Control" parent="BackGround/ActiveLevels/Level1"]
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 95.0
offset_top = 355.0
offset_right = 135.0
offset_bottom = 355.0

[node name="CheckboxChecked" type="TextureRect" parent="BackGround/ActiveLevels/Level1/Task"]
visible = false
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("6_iatqu")

[node name="Label" type="Label" parent="BackGround/ActiveLevels/Level1/Task/CheckboxChecked"]
offset_left = 52.0
offset_right = 194.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 22
text = "Do this thing "

[node name="CheckboxUnchecked" type="TextureRect" parent="BackGround/ActiveLevels/Level1/Task"]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("7_58dtw")

[node name="Label" type="Label" parent="BackGround/ActiveLevels/Level1/Task/CheckboxUnchecked"]
offset_left = 52.0
offset_right = 194.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 22
text = "Do this thing "

[node name="Tasks" type="VBoxContainer" parent="BackGround/ActiveLevels/Level1"]
offset_left = 95.0
offset_top = 355.0
offset_right = 135.0
offset_bottom = 395.0
theme_override_constants/separation = 53

[node name="Task" type="Control" parent="BackGround/ActiveLevels/Level1/Tasks"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0

[node name="CheckboxChecked" type="TextureRect" parent="BackGround/ActiveLevels/Level1/Tasks/Task"]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("6_iatqu")

[node name="Label" type="Label" parent="BackGround/ActiveLevels/Level1/Tasks/Task/CheckboxChecked"]
offset_left = 52.0
offset_right = 194.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("10_ywh2y")
theme_override_font_sizes/font_size = 25
text = "Clock in "

[node name="CheckboxUnchecked" type="TextureRect" parent="BackGround/ActiveLevels/Level1/Tasks/Task"]
visible = false
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("7_58dtw")

[node name="Label" type="Label" parent="BackGround/ActiveLevels/Level1/Tasks/Task/CheckboxUnchecked"]
visible = false
offset_left = 52.0
offset_right = 194.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_ywh2y")
theme_override_font_sizes/font_size = 25
text = "Do this thing "

[node name="Task2" type="Control" parent="BackGround/ActiveLevels/Level1/Tasks"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_top = 53.0
offset_right = 40.0
offset_bottom = 53.0

[node name="CheckboxChecked" type="TextureRect" parent="BackGround/ActiveLevels/Level1/Tasks/Task2"]
visible = false
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("6_iatqu")

[node name="Label" type="Label" parent="BackGround/ActiveLevels/Level1/Tasks/Task2/CheckboxChecked"]
offset_left = 52.0
offset_right = 194.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.466667, 0.466667, 0.466667, 1)
theme_override_fonts/font = ExtResource("10_ywh2y")
theme_override_font_sizes/font_size = 25
text = "Do this thing "

[node name="CheckboxUnchecked" type="TextureRect" parent="BackGround/ActiveLevels/Level1/Tasks/Task2"]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("7_58dtw")

[node name="Label" type="Label" parent="BackGround/ActiveLevels/Level1/Tasks/Task2/CheckboxUnchecked"]
offset_left = 52.0
offset_right = 194.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_ywh2y")
theme_override_font_sizes/font_size = 25
text = "BUGFIX: NPC in village not operating to set script"

[node name="Task3" type="Control" parent="BackGround/ActiveLevels/Level1/Tasks"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_top = 106.0
offset_right = 40.0
offset_bottom = 106.0

[node name="CheckboxUnchecked" type="TextureRect" parent="BackGround/ActiveLevels/Level1/Tasks/Task3"]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("7_58dtw")

[node name="Label" type="Label" parent="BackGround/ActiveLevels/Level1/Tasks/Task3/CheckboxUnchecked"]
offset_left = 52.0
offset_right = 194.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_ywh2y")
theme_override_font_sizes/font_size = 25
text = "Write Report"

[node name="Task4" type="Control" parent="BackGround/ActiveLevels/Level1/Tasks"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_top = 159.0
offset_right = 40.0
offset_bottom = 159.0

[node name="CheckboxUnchecked" type="TextureRect" parent="BackGround/ActiveLevels/Level1/Tasks/Task4"]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("7_58dtw")

[node name="Label" type="Label" parent="BackGround/ActiveLevels/Level1/Tasks/Task4/CheckboxUnchecked"]
offset_left = 52.0
offset_right = 194.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_ywh2y")
theme_override_font_sizes/font_size = 25
text = "Check in with art team about that assets"

[node name="ExitButton" type="TextureButton" parent="BackGround"]
texture_filter = 1
offset_left = 965.882
offset_top = 17.6471
offset_right = 1017.88
offset_bottom = 69.6471
texture_normal = ExtResource("4_domvs")
texture_pressed = ExtResource("9_rykan")
texture_hover = ExtResource("10_kx7y2")

[node name="StartButton" type="TextureButton" parent="BackGround"]
texture_filter = 1
offset_left = 64.0
offset_top = 869.0
offset_right = 312.0
offset_bottom = 933.0
texture_normal = ExtResource("11_ao3mt")
texture_pressed = ExtResource("12_1h5n3")
texture_hover = ExtResource("13_7uosg")

[node name="Label" type="Label" parent="BackGround/StartButton"]
texture_filter = 1
offset_left = 44.0
offset_top = 10.0
offset_right = 202.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_3ruvt")
theme_override_font_sizes/font_size = 30
text = "Start Tasks"
